# RagTE

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  ROADMAP.md  UPGRADE_DOCS.md  app.py  clean_qdrant.py  docker-compose.local-embeddings.yml  docker-compose.prod.yml  docker-compose.vlm.yml  docker-compose.yml  fix_status.py  ingest.py  manage_users.py  migrate_departments.py  pyproject.toml  refactor_docs.py  refactor_universes.py  requirements.txt  scratch_docling.py  scratch_docling_chunk.py  test_api.py  test_rag.py  vector_store.py
api/: auth.py  config.py  database.py  embeddings.py  ingestion_worker.py  logging_config.py  main.py  models.py  policy.py  seed_admin.py
chroma_db/: chroma.sqlite3
eval/: big3_trace.py  ground_truth.json  qwen_text_payload.json  run_eval.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
nginx/: frontend.conf  rag.conf
scripts/: backfill_document_facts.py  backup.sh  benchmark_cdc01_vlm_ocr.py  benchmark_gemma_vlm.py  check_architecture.py  check_frontend_boundaries.js  check_hf_blob_hashes.py  check_safetensors.py  ci_frontend.ps1  clean_qdrant.py  deploy_dgx.sh  diagnose_arabic_extraction.py  download_hf_snapshot.py  evaluate_tender_profiles.py  find_qdrant_docs.py  import_legacy_pdfs.py  inspect_cdc01_terms.py  inspect_document_facts.py  reconcile_documents.py  reindex_documents.py  seed_admin.py  smoke_openai_vlm.py  smoke_transformers_qwen_vl.py  trace_cdc01_qdrant.py  vlm_transcribe_pdf.py
tests/: conftest.py  test_auth_tokens.py  test_document_facts.py  (+19 more)
(+66 files in other folders)
